[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/noto-sans/NotoSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/google.png" type="Texture" id=2]
[ext_resource path="res://Modules/SearchEngine/Homepage.gd" type="Script" id=3]
[ext_resource path="res://Modules/SearchEngine/GoogleTheme.tres" type="Theme" id=4]
[ext_resource path="res://Modules/SearchEngine/Google.gd" type="Script" id=5]
[ext_resource path="res://Modules/SearchEngine/Page.gd" type="Script" id=6]
[ext_resource path="res://assets/HelpPage_IconPack-06.png" type="Texture" id=7]
[ext_resource path="res://Modules/SearchEngine/SearchResults.gd" type="Script" id=8]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 235.047, 14.6279 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 1 )

[node name="Google" type="Node2D"]
script = ExtResource( 5 )

[node name="Homepage" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="Homepage"]
margin_right = 1017.0
margin_bottom = 599.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="Homepage"]
position = Vector2( 496.218, 221.25 )
scale = Vector2( 9.67857, 9.67857 )
texture = ExtResource( 2 )

[node name="Searchbar" type="LineEdit" parent="Homepage"]
margin_left = 336.0
margin_top = 310.0
margin_right = 682.0
margin_bottom = 339.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeelingLuckyButton" type="Button" parent="Homepage"]
margin_left = 509.445
margin_top = 369.882
margin_right = 670.445
margin_bottom = 397.882
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "I'm Feeling Lucky"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchButton" type="Button" parent="Homepage"]
margin_left = 345.036
margin_top = 369.891
margin_right = 480.036
margin_bottom = 397.891
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "Goojle Search"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchResults" type="Node2D" parent="."]
visible = false
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="SearchResults"]
margin_right = 1017.0
margin_bottom = 599.0
mouse_filter = 2
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizontalRule" type="ColorRect" parent="SearchResults"]
margin_top = 101.0
margin_right = 1014.0
margin_bottom = 102.0
color = Color( 0.819608, 0.819608, 0.819608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="SearchResults"]
position = Vector2( 98.8453, 49.8611 )
scale = Vector2( 4.015, 4.015 )
texture = ExtResource( 2 )

[node name="Searchbar" type="LineEdit" parent="SearchResults"]
margin_left = 201.0
margin_top = 39.0
margin_right = 655.0
margin_bottom = 68.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultCountLabel" type="Label" parent="SearchResults"]
margin_left = 211.051
margin_top = 119.53
margin_right = 313.051
margin_bottom = 139.53
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.435294, 0.419608, 0.419608, 1 )
text = "About 3 results"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagnifyingGlass" type="Area2D" parent="SearchResults"]

[node name="Sprite" type="Sprite" parent="SearchResults/MagnifyingGlass"]
position = Vector2( 680.31, 51.6781 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SearchResults/MagnifyingGlass"]
polygon = PoolVector2Array( 672.806, 30.5873, 699.608, 49.5926, 688.4, 73.9584, 663.06, 63.2374, 661.598, 35.4605 )

[node name="SearchResultsContainer" type="VBoxContainer" parent="SearchResults"]
margin_left = 198.0
margin_top = 159.247
margin_right = 721.0
margin_bottom = 578.247
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchResult0" type="Control" parent="SearchResults/SearchResultsContainer"]
margin_right = 523.0
mouse_filter = 2

[node name="UrlLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult0"]
margin_left = 12.5741
margin_top = 4.24753
margin_right = 265.574
margin_bottom = 18.2475
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "en.wikipedia.org › wiki › BoardGameGeek"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult0"]
margin_left = 11.6979
margin_top = 18.901
margin_right = 278.698
margin_bottom = 46.901
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0941176, 0.207843, 0.92549, 1 )
text = "BoardGameGeek - Wikipedia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult0"]
margin_left = 14.282
margin_top = 51.4207
margin_right = 614.282
margin_bottom = 101.421
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BoardGameGeek (BGG) is an online forum for board gaming hobbyists and a game database that holds reviews, images and videos for over 101,000 different ..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="Area2D" parent="SearchResults/SearchResultsContainer/SearchResult0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchResults/SearchResultsContainer/SearchResult0/Link"]
position = Vector2( 246.094, 34.5994 )
shape = SubResource( 5 )

[node name="SearchResult1" type="Control" parent="SearchResults/SearchResultsContainer"]
margin_top = 4.0
margin_right = 523.0
margin_bottom = 4.0
mouse_filter = 2

[node name="UrlLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult1"]
margin_left = 12.5741
margin_top = 99.1087
margin_right = 265.574
margin_bottom = 113.109
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "en.wikipedia.org › wiki › BoardGameGeek"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult1"]
margin_left = 11.6979
margin_top = 113.762
margin_right = 278.698
margin_bottom = 141.762
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0941176, 0.207843, 0.92549, 1 )
text = "BoardGameGeek - Wikipedia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult1"]
margin_left = 14.282
margin_top = 146.282
margin_right = 614.282
margin_bottom = 196.282
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BoardGameGeek (BGG) is an online forum for board gaming hobbyists and a game database that holds reviews, images and videos for over 101,000 different ..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="Area2D" parent="SearchResults/SearchResultsContainer/SearchResult1"]
position = Vector2( 0, 94.925 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchResults/SearchResultsContainer/SearchResult1/Link"]
position = Vector2( 246.094, 34.5994 )
shape = SubResource( 5 )

[node name="SearchResult2" type="Control" parent="SearchResults/SearchResultsContainer"]
margin_top = 8.0
margin_right = 523.0
margin_bottom = 8.0
mouse_filter = 2

[node name="UrlLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult2"]
margin_left = 12.5741
margin_top = 193.262
margin_right = 265.574
margin_bottom = 207.262
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "en.wikipedia.org › wiki › BoardGameGeek"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult2"]
margin_left = 11.6979
margin_top = 207.915
margin_right = 278.698
margin_bottom = 235.915
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0941176, 0.207843, 0.92549, 1 )
text = "BoardGameGeek - Wikipedia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult2"]
margin_left = 14.282
margin_top = 240.435
margin_right = 614.282
margin_bottom = 290.435
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BoardGameGeek (BGG) is an online forum for board gaming hobbyists and a game database that holds reviews, images and videos for over 101,000 different ..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="Area2D" parent="SearchResults/SearchResultsContainer/SearchResult2"]
position = Vector2( 0, 188.388 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchResults/SearchResultsContainer/SearchResult2/Link"]
position = Vector2( 246.094, 34.5994 )
shape = SubResource( 5 )

[node name="SearchResult3" type="Control" parent="SearchResults/SearchResultsContainer"]
margin_top = 12.0
margin_right = 523.0
margin_bottom = 12.0
mouse_filter = 2

[node name="UrlLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult3"]
margin_left = 12.5741
margin_top = 290.247
margin_right = 265.574
margin_bottom = 304.247
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "en.wikipedia.org › wiki › BoardGameGeek"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult3"]
margin_left = 11.6979
margin_top = 304.9
margin_right = 278.698
margin_bottom = 332.9
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0941176, 0.207843, 0.92549, 1 )
text = "BoardGameGeek - Wikipedia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescLabel" type="Label" parent="SearchResults/SearchResultsContainer/SearchResult3"]
margin_left = 14.282
margin_top = 337.42
margin_right = 614.282
margin_bottom = 387.42
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BoardGameGeek (BGG) is an online forum for board gaming hobbyists and a game database that holds reviews, images and videos for over 101,000 different ..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="Area2D" parent="SearchResults/SearchResultsContainer/SearchResult3"]
position = Vector2( 0, 285.262 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchResults/SearchResultsContainer/SearchResult3/Link"]
position = Vector2( 246.094, 34.5994 )
shape = SubResource( 5 )

[node name="Page" type="Node2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="Page"]
margin_left = 0.974609
margin_top = 0.48732
margin_right = 1017.97
margin_bottom = 599.487
mouse_filter = 2
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Page"]
margin_left = 430.299
margin_top = 51.1681
margin_right = 589.299
margin_bottom = 90.1681
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This is a test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Label" parent="Page"]
margin_left = 106.0
margin_top = 129.0
margin_right = 921.0
margin_bottom = 552.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lorem ipsum"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrowserControls" type="CanvasLayer" parent="."]

[node name="BackButton" type="Button" parent="BrowserControls"]
margin_left = 17.5434
margin_top = 20.4672
margin_right = 59.5434
margin_bottom = 40.4672
mouse_default_cursor_shape = 2
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="BrowserControls"]
margin_left = 963.909
margin_top = 19.4926
margin_right = 983.909
margin_bottom = 39.4926
mouse_default_cursor_shape = 2
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
